k8s/aly/release-191206/bot-svc.yaml
# account svc k8s 部署文件
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bot-svc-deployment-release-191206
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bot-svc-release-191206
        env: dev
    spec:
      containers:
        - name: bot-svc-release-191206
          image: registry.cn-shenzhen.aliyuncs.com/hw_test/micro-demo-bot-svc:release-191206
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
          - mountPath: /etc/localtime
            name: dateconf
      imagePullSecrets:
        - name: aly-regsecret
      volumes:
      - name: dateconf
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
---
apiVersion: v1
kind: Service
metadata:
  name: bot-service-release-191206
spec:
  selector:
    app: bot-svc-release-191206
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
