k8s/aly/release-191206/gateway-svc.yaml
# account svc k8s 部署文件
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway-svc-deployment-release-191206
spec:
  replicas: 1
  strategy:
    rollingUpdate:  ##由于replicas为3,则整个升级,pod个数在2-4个之间
      maxSurge: 1      #滚动升级时会先启动1个pod
      maxUnavailable: 1 #滚动升级时允许的最大Unavailable的pod个数
  template:
    metadata:
      labels:
        app: gateway-svc-release-191206
        env: dev
    spec:
      containers:
        - name: gateway-svc-release-191206
          image: registry.cn-shenzhen.aliyuncs.com/hw_test/micro-demo-gateway-svc:release-191206
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 80
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
          - mountPath: /etc/localtime
            name: dateconf
      imagePullSecrets:
        - name: aly-regsecret
      volumes:
      - name: dateconf
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service-release-191206
spec:
  selector:
    app: gateway-svc-release-191206
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
